# rules_rust

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  version.bzl
.bazelci/: presubmit.yml
.github/workflows/: cargo_bazel_release.yaml  release.yaml
bindgen/: BUILD.bazel  bindgen.bzl  defs.bzl  repositories.bzl
bindgen/private/: BUILD.bazel  bindgen.bzl
cargo/: cargo_bootstrap.bzl
cargo/cargo_build_script_runner/: bin.rs
cargo/private/: cargo_build_script.bzl  cargo_build_script_wrapper.bzl
crate_universe/: BUILD.bazel  Cargo.toml  docs.bzl  version.bzl
crate_universe/private/: common_utils.bzl  crate.bzl  crates_repository.bzl  crates_vendor.bzl  generate_utils.bzl  srcs.bzl
crate_universe/src/: config.rs  context.rs  lockfile.rs  metadata.rs  rendering.rs  splicing.rs
crate_universe/src/cli/: query.rs  splice.rs  vendor.rs
crate_universe/src/context/: crate_context.rs  platforms.rs
crate_universe/src/metadata/: dependency.rs  metadata_annotation.rs
crate_universe/src/rendering/: template_engine.rs
crate_universe/src/rendering/templates/: module_bzl.j2
crate_universe/src/rendering/templates/partials/crate/: aliases.j2  build_script.j2  common_attrs.j2  deps.j2
crate_universe/src/splicing/: splicer.rs
crate_universe/src/utils/: starlark.rs
crate_universe/src/utils/starlark/: glob.rs  label.rs  select.rs  serialize.rs
crate_universe/test_data/metadata/crate_optional_deps_disabled/: metadata.json
crate_universe/test_data/metadata/crate_optional_deps_enabled/: Cargo.toml  metadata.json
crate_universe/test_data/serialized_configs/: BUILD.bazel
crate_universe/tests/: cargo_integration_test.rs  version_test.rs
crate_universe/tools/urls_generator/src/: main.rs
docs/: BUILD.bazel  WORKSPACE.bazel  cargo.md  crate_universe.md  defs.md  flatten.md  index.md  rust_analyzer.md  rust_bindgen.md  rust_bindgen.vm  rust_fmt.md  rust_proto.md  rust_proto.vm  rust_repositories.md  symbols.bzl
examples/: .bazelrc  WORKSPACE.bazel
examples/android/: .bazelrc
examples/bzlmod/hello_world/: .bazelrc
examples/crate_universe/: .bazelrc  WORKSPACE.bazel
examples/crate_universe/cargo_aliases/: cargo-bazel-lock.json
examples/crate_universe/cargo_conditional_deps/: cargo-bazel-lock.json
examples/crate_universe/cargo_workspace/: cargo-bazel-lock.json
examples/crate_universe/multi_package/: .bazelrc  cargo-bazel-lock.json
examples/crate_universe/no_cargo_manifests/: cargo-bazel-lock.json
examples/crate_universe/using_cxx/: BUILD.bazel  cargo-bazel-lock.json  rust_cxx_bridge.bzl
examples/crate_universe/using_cxx/include/: blobstore.h
examples/crate_universe/vendor_external/crates/: BUILD.atty-0.2.14.bazel  BUILD.autocfg-1.1.0.bazel  BUILD.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.clap-3.1.5.bazel  BUILD.clap-3.2.23.bazel  BUILD.clap_derive-3.1.4.bazel  BUILD.clap_derive-3.2.18.bazel  BUILD.clap_lex-0.2.4.bazel  BUILD.form_urlencoded-1.0.1.bazel  BUILD.form_urlencoded-1.1.0.bazel  BUILD.getrandom-0.2.5.bazel  BUILD.getrandom-0.2.8.bazel  BUILD.getrandom-0.2.9.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.hashbrown-0.12.3.bazel  BUILD.heck-0.4.0.bazel  BUILD.heck-0.4.1.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.idna-0.2.3.bazel  BUILD.idna-0.3.0.bazel  BUILD.indexmap-1.8.0.bazel  BUILD.indexmap-1.9.2.bazel  BUILD.indexmap-1.9.3.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.119.bazel  BUILD.libc-0.2.137.bazel  BUILD.libc-0.2.142.bazel  BUILD.matches-0.1.9.bazel  BUILD.memchr-2.4.1.bazel  BUILD.memchr-2.5.0.bazel  BUILD.once_cell-1.16.0.bazel  BUILD.once_cell-1.17.1.bazel  BUILD.os_str_bytes-6.0.0.bazel  BUILD.os_str_bytes-6.3.1.bazel  BUILD.os_str_bytes-6.4.1.bazel  BUILD.os_str_bytes-6.5.0.bazel  BUILD.percent-encoding-2.1.0.bazel  BUILD.percent-encoding-2.2.0.bazel  (+64 more)
examples/crate_universe/vendor_local_pkgs/: BUILD.bazel
examples/crate_universe/vendor_remote_pkgs/: BUILD.bazel
examples/crate_universe_unnamed/: bazel-bin  bazel-crate_universe_unnamed  bazel-out  bazel-testlogs
examples/crate_universe_unnamed/vendor_remote_pkgs/: BUILD.bazel
examples/ios/: .bazelrc  WORKSPACE.bazel
examples/ios_build/: .bazelrc  WORKSPACE.bazel  cargo-bazel-lock.json
examples/proto/basic/: BUILD.bazel
examples/proto/helloworld/: BUILD.bazel
examples/zig_cross_compiling/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
proto/: BUILD.bazel  defs.bzl  proto.bzl  repositories.bzl
proto/prost/: defs.bzl  repositories.bzl
proto/prost/private/: BUILD.bazel  prost.bzl  protoc_wrapper.rs  providers.bzl
rust/: defs.bzl  known_shas.bzl  repositories.bzl  rust_common.bzl  toolchain.bzl
rust/platform/: platform.bzl  triple.bzl  triple_mappings.bzl
rust/private/: clippy.bzl  common.bzl  providers.bzl  repository_utils.bzl  rust.bzl  rust_analyzer.bzl  rustc.bzl  rustdoc.bzl  rustdoc_test.bzl  rustfmt.bzl  utils.bzl
test/: deps.bzl
test/cargo_build_script/: BUILD.bazel  build.rs
test/cargo_build_script/run_from_exec_root/: BUILD.bazel  build.rs
test/cc_common_link/: BUILD.bazel
test/clippy/: clippy_failure_test.sh
test/generated_inputs/: BUILD.bazel  external_repo.bzl
test/load_arbitrary_tool/: load_arbitrary_tool_test.bzl
test/no_std/: cargo-bazel-lock.json
test/out_dir_in_tests/: BUILD.bazel
test/portable_link_flags_darwin/: test.sh
test/process_wrapper/: rustc_quit_on_rmeta.rs
test/rustfmt/: rustfmt_failure_test.sh
test/toolchain/: toolchain_test.bzl
test/unit/ambiguous_libs/: ambiguous_libs_test.bzl
test/unit/native_deps/: native_action_inputs_test.bzl  native_deps_test.bzl
test/unit/repository_utils/: repository_utils_test.bzl
test/unit/rustdoc/: rustdoc_unit_test.bzl
test/unit/toolchain/: toolchain_test.bzl
tools/runfiles/: runfiles.rs
tools/rust_analyzer/: lib.rs  main.rs  rust_project.rs
tools/rustdoc/: rustdoc_test_writer.rs
tools/rustfmt/: BUILD.bazel
tools/rustfmt/src/: lib.rs
util/: fetch_shas_NIGHTLY_ISO_DATES.txt  fetch_shas_TARGETS.txt  fetch_shas_VERSIONS.txt
util/process_wrapper/: options.rs
wasm_bindgen/: repositories.bzl
(+814 files in other folders)
