load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bindgen:bindgen.bzl", "rust_bindgen_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

alias(
    name = "bindgen_toolchain",
    actual = "toolchain_type",
    deprecation = "instead use `@rules_rust//bindgen:toolchain_type`",
    tags = ["manual"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//bindgen/3rdparty:bzl_lib",
        "//rust:bzl_lib",
    ],
)

rust_bindgen_toolchain(
    name = "default_bindgen_toolchain_impl",
    bindgen = "//bindgen/3rdparty:bindgen",
    clang = select({
        "//rust/platform:x86_64-unknown-linux-gnu": "@bindgen_clang_linux_x86_64//:clang",
        "//rust/platform:x86_64-apple-darwin": "@bindgen_clang_osx_x86_64//:clang",
        "//rust/platform:aarch64-unknown-linux-gnu": "@bindgen_clang_linux_aarch64//:clang",
    }),
    libclang = select({
        "//rust/platform:x86_64-unknown-linux-gnu": "@bindgen_clang_linux_x86_64//:libclang",
        "//rust/platform:x86_64-apple-darwin": "@bindgen_clang_osx_x86_64//:libclang",
        "//rust/platform:aarch64-unknown-linux-gnu": "@bindgen_clang_linux_aarch64//:libclang",
        # TODO aarch64 apple-darwin
    }),
    libstdcxx = select({
        "//rust/platform:x86_64-apple-darwin": "@bindgen_clang_osx_x86_64//:libc++",
        # TODO aarch64 apple-darwin
        "//conditions:default": None,
    }),
)

toolchain(
    name = "default_bindgen_toolchain",
    toolchain = "default_bindgen_toolchain_impl",
    toolchain_type = "//bindgen:toolchain_type",
)
