[workspace]
members = [
    "tools/cross_installer",
    "tools/urls_generator",
]

[package]
name = "cargo-bazel"
version = "0.6.0"
authors = [
    "Andre Brisco - andre.brisco@protonmail.com",
]
edition = "2018"

[features]
cargo = []
default = ["cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cargo_metadata = "0.15.2"
cargo_toml = "0.13.0"
cargo-lock = "8.0.3"
cargo-platform = "0.1.2"
cfg-expr = "0.12.0"
clap = { version = "4.0.29", features = ["derive", "env"] }
crates-index = { version = "0.18.11", default-features = false }
hex = "0.4.3"
normpath = "0.3.2"
pathdiff = "0.2.1"
regex = "1.7.0"
semver = "1.0.14"
serde = "1.0.148"
serde_json = "1.0.89"
sha2 = "0.10.6"
tempfile = "3.3.0"
tera = "1.17.1"
textwrap = "0.16.0"
toml = "0.5.9"

[dev-dependencies]
maplit = "1.0.2"
spectral = "0.6.0"
