[workspace]
members = [
    "tools/cross_installer",
    "tools/urls_generator",
]
exclude = ["test_data"]

[package]
name = "cargo-bazel"
version = "0.8.0"
authors = [
    "Andre Brisco - andre.brisco@protonmail.com",
]
edition = "2018"

[features]
cargo = []
default = ["cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cargo_metadata = "0.15.4"
cargo_toml = "0.15.2"
cargo-lock = "8.0.3"
cargo-platform = "0.1.2"
cfg-expr = "0.15.0"
clap = { version = "4.2.1", features = ["derive", "env"] }
crates-index = { version = "0.19.7", default-features = false }
hex = "0.4.3"
indoc = "2.0.1"
normpath = "1.1.1"
pathdiff = "0.2.1"
regex = "1.7.3"
semver = "1.0.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_starlark = "0.1.11"
sha2 = "0.10.6"
tempfile = "3.5.0"
tera = "1.18.1"
textwrap = "0.16.0"
toml = "0.7.3"

[dev-dependencies]
maplit = "1.0.2"
spectral = "0.6.0"
